--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:mysql://117.72.196.146:49152/tianmu?useSSL=false&serverTimezone=UTC&characterEncoding=UTF-8
-    username: remote_admin
-    password: gK3T9n%q2M@j7Z4
+    username: root
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 
